# injx

./: .gitignore  LICENSE  Makefile  README.md  README_CN.md  go.mod
examples/: README.md
examples/linux/: hello_so.rs
examples/macos/: hello_dylib.rs  hook_demo.rs
examples/payloads/: README.md  template_dll.c  template_dylib.c  template_so.c
examples/windows/: keylogger_demo.rs  messagebox.rs  procinfo.rs
go/: go.mod  inject.go  inject_darwin.go  inject_linux.go  inject_windows.go
go/cmd/injgo/: main.go
rust/: Cargo.toml
rust/src/: elevate_windows.rs  error.rs  inject.rs  inject_linux.rs  inject_macos.rs  inject_windows.rs  lib.rs  main.rs  process.rs  process_linux.rs  process_macos.rs  process_windows.rs  utils.rs  winapi.rs
scripts/: build.sh
