[package]
name = "jinx"
version = "0.2.0"
description = "Cross-language DLL/dylib injection toolkit. 跨语言动态库注入工具包。"
authors = ["Zoe <hi@zoe.im>"]
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "hellobox"
crate-type = ["cdylib"]


[dependencies.winapi]
version = "0.3.9"
features = [
    "memoryapi",
    "minwindef",
    "ntdef", 
    "winuser",
    "tlhelp32",
    "psapi", 
    "securitybaseapi",
    "libloaderapi", 
    "synchapi", 
    "wow64apiset",
    "processthreadsapi", 
    "handleapi", 
    "winbase",
    "impl-default",
]
