[package]
name = "injx"
version = "0.2.0"
description = "Cross-platform dynamic library injection toolkit. 跨平台动态库注入工具包。"
authors = ["Zoe <hi@zoe.im>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/jiusanzhou/injx"
keywords = ["injection", "dll", "dylib", "ptrace", "mach"]
categories = ["development-tools", "os"]

[[example]]
name = "hellobox"
crate-type = ["cdylib"]

# Windows dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
    "memoryapi",
    "minwindef",
    "ntdef", 
    "winuser",
    "tlhelp32",
    "psapi", 
    "securitybaseapi",
    "libloaderapi", 
    "synchapi", 
    "wow64apiset",
    "processthreadsapi", 
    "handleapi", 
    "winbase",
    "impl-default",
]}

# macOS dependencies
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

# Linux dependencies  
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
nix = { version = "0.27", features = ["process", "ptrace"] }

[dev-dependencies]
tempfile = "3"
